added projection; set fps not complete

--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow: hidden;
 }
 
 /* data input area */
@@ -91,7 +92,7 @@ input[type="text"] {
     -webkit-transition: background-color .7s cubic-bezier(0.001, 0.610, 0.355, 1);
 }
 
-.shared-info-container > .container-width {
+.shared-info-container > input[type="text"] {
     text-align: center;
     width: 5em;
     height: 1.6em;
@@ -129,21 +130,11 @@ input[type="text"] {
 /* draw panel */
 
 div#container {
+    position: relative;
     width: 40%;
     background-color: rgba(255, 255, 255, .3);
     padding: 0;
-}
-
-@media only screen and (max-width:850px) {
-    div#container {
-        width: 70%;
-    }
-}
-
-@media only screen and (max-width:600px) {
-    div#container {
-        width: 90%;
-    }
+    margin-bottom: 2em;
 }
 
 div#origin {
@@ -157,10 +148,50 @@ div#origin {
 }
 
 div.moving-obj {
-    position: relative;
+    position: absolute;
     background-color: rgba(230, 192, 87, .9);
     border-radius: 50%;
     width: 20px;
     height: 20px;
     padding: 0;
+}
+
+div#projections {
+    position: relative;
+    width: 40%;
+    height: 10px;
+    background-color: rgba(255, 255, 255, .3);
+    margin-bottom: 2em;
+}
+
+div.moving-obj-prj {
+    position: absolute;
+    background-color: rgba(230, 192, 87, .9);
+    width: 13px;
+    height: 10px;
+}
+
+@media only screen and (max-width:850px) {
+    div#container, div#projections {
+        width: 70%;
+    }
+}
+
+@media only screen and (max-width:600px) {
+    div#container, div#projections {
+        width: 90%;
+    }
+}
+
+/* bottom fps */
+
+.shared-info-container-bo {
+    font-size: 80%;
+}
+
+.shared-info-container-bo input[type="button"] {
+    border: none;
+    color: rgba(230, 230, 230, 1);
+    background-color: rgba(255, 255, 255, .2);
+    padding: 0 .2em 0 .2em;
 }
