--- a/css/style.css
+++ b/css/style.css
@@ -112,14 +112,19 @@ input[type="text"] {
     height: 2.6em;
 }
 
+.info-container input.set-attr-go {
+    color: grey;
+}
+
 .info-container input.set-attr-reset {
     background-color: #b3ad9d;
 }
 
 .info-container input[type="button"]:hover {
-    background-color: #aba555;
-    transition: background-color .1s ease;
-    -webkit-transition: background-color .1s ease;
+    background-color: rgba(255, 255, 255, .8) !important;
+    color: rgba(40, 40, 40, 1);
+    transition: background-color .3s ease;
+    -webkit-transition: background-color .3s ease;
 }
 
 .info-container input[type="button"]:active {
@@ -135,13 +140,14 @@ div#container {
     background-color: rgba(255, 255, 255, .3);
     padding: 0;
     margin-bottom: 2em;
+    overflow: hidden;
 }
 
 div#origin {
     position: relative;
-    background-color: blueviolet;
-    width: 1%;
-    height: 1%;
+    background-color: rgba(143, 0, 255, .3);
+    width: 6px;
+    height: 6px;
     border: 1px solid black;
     border-radius: 40%;
     padding: 0;
@@ -156,12 +162,21 @@ div.moving-obj {
     padding: 0;
 }
 
+div.moving-obj-trajectory {
+    position: absolute;
+    border: .6px dashed rgba(255, 255, 255, .13);
+    border-radius: 50%;
+    left: 50%;
+    top: 50%;
+    padding: 0;
+}
+
 div.projections {
     position: relative;
     width: 40%;
     height: 10px;
     background-color: rgba(255, 255, 255, .3);
-    margin-bottom: 2em;
+    margin-bottom: .3em;
 }
 
 div.moving-obj-prj {
@@ -183,10 +198,56 @@ div.moving-obj-prj {
     }
 }
 
+/* description */
+
+.description {
+    margin-top: 3em;
+    width: 40%;
+    font-size: 90%;
+    line-height: 1.5em;
+    text-indent: 2em;
+    text-align: left;
+    margin-bottom: 2em;
+}
+
+@media only screen and (max-width:850px) {
+    .description {
+        width: 70%;
+    }
+}
+
+@media only screen and (max-width:600px) {
+    .description {
+        width: 90%;
+    }
+}
+
+.description .bold {
+    font-weight: bold;
+}
+
+.description .equation {
+    display: block;
+    text-align: center;
+    padding: 0 0 0 0;
+}
+
+hr {
+    width: 80%;
+    color: rgba(255, 255, 255, .2);
+}
+
+@media only screen and (max-width:850px) {
+    hr {
+        width: 97%;
+    }
+}
+
 /* bottom fps */
 
 .shared-info-container-bo {
     font-size: 80%;
+    margin-top: 2em;
 }
 
 .shared-info-container-bo input[type="button"] {
@@ -194,4 +255,8 @@ div.moving-obj-prj {
     color: rgba(230, 230, 230, 1);
     background-color: rgba(255, 255, 255, .2);
     padding: 0 .2em 0 .2em;
+}
+
+footer {
+    margin: 1em 0 1.5em 0;
 }
