--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,8 @@ body {
 }
 
 
-input[type="text"] {
+input[type="text"],
+select {
     background-color: rgba(255, 255, 255, .3);
     border: none;
     color: white;
@@ -125,6 +126,10 @@ input[type="text"] {
     padding-right: .25em;
     transition: background-color .7s cubic-bezier(0.001, 0.610, 0.355, 1);
     -webkit-transition: background-color .7s cubic-bezier(0.001, 0.610, 0.355, 1);
+}
+
+select option {
+    color: black;
 }
 
 .shared-info-container > input[type="text"] {
@@ -181,26 +186,27 @@ div#container {
 div#origin {
     position: relative;
     background-color: rgba(143, 0, 255, .3);
-    width: 6px;
-    height: 6px;
-    border: 1px solid black;
-    border-radius: 40%;
+    width: 4px;
+    height: 4px;
+    border-radius: 50%;
     padding: 0;
+    transition: box-shadow 3s linear;
+    -webkit-transition: -webkit-box-shadow 3s linear;
 }
 
 div.moving-obj {
     position: absolute;
     background-color: rgba(230, 192, 87, .9);
     border-radius: 50%;
-    width: 20px;
-    height: 20px;
+    width: 15px;
+    height: 15px;
     padding: 0;
 }
 
 div.moving-obj-trajectory {
     position: absolute;
     border: .6px dashed;
-    border-color: rgba(255,255,255,.18) !important;
+    border-color: rgba(255,255,255,.18);
     border-radius: 50%;
     left: 50%;
     top: 50%;
@@ -221,6 +227,7 @@ div.projections {
     height: 10px;
     background-color: rgba(255, 255, 255, .3);
     margin-bottom: .3em;
+    overflow: hidden;
 }
 
 div.moving-obj-prj {
